Styled the page title and description

--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
     <div class="container">
 
       <div class="row">
-        <div class="col-md-12">
-          <h1>Preference Matrix</h1>
+        <div class="col-xs-12">
+          <h1 class="page-title">Preference Matrix</h1>
         </div> <!-- column -->
       </div> <!-- row -->
 
       <div class="row">
-        <div class="col-md-12">
-          <p>Preference Matrix description</p>
+        <div class="col-xs-12 col-sm-6 col-sm-offset-3">
+          <p class="page-description">Preference Matrix description</p>
         </div> <!-- column -->
       </div> <!-- row -->
 
