Added a project description

--- a/index.html
+++ b/index.html
@@ -25,7 +25,12 @@
 
       <div class="row">
         <div class="col-xs-12 col-sm-6 col-sm-offset-3">
-          <p class="page-description">Preference Matrix description</p>
+          <div class="page-description">
+            <p>Take the 10 people closest to you in your life. What would happen if you tried to order them in an order of preference?</p>
+            <p>Making a preference order in the usual way will likely result in an inaccurate list. It is difficult to really understand our own preferences: our brain plays tricks, we have biases we're not aware of, and we conform to societal expectations without realising.</p>
+            <p>A method that works better is to compare the subjects of your list pairwise. Pairwise comparison eliminates abstractions such as "family is important to me" or "I owe my friends" and instead helps focus on the concrete, bare truth: if I had to choose just one out of this pair, which one would I choose?</p>
+            <p>This simple app lets you enter your preferences, perform these pairwise comparisons, and view the results. Give it a try below!</p>
+          </div>
         </div> <!-- column -->
       </div> <!-- row -->
 
