Added optional Google Analytics tracking to the code

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <script src="bower_components/babel/browser.js"></script>
     <script src="bower_components/moment/moment.js"></script>
     <script src="bower_components/javascript-md5/js/md5.js"></script>
+    <script src="conf/google-analytics.js"></script>
   </head>
   <body>
     <div class="container">
